--- a/home.html
+++ b/home.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
-  <ul class="nav fixed-top">
+  <ul class="nav fixed-top d-flex justify-content-between mx-5 my-4">
     <li class="nav-item">
-      <p  class="nav-link fs-2 btn-lg text-white bg-info log_out" >log_out</p>
+      <p  class="nav-link fs-1 bg-warning bg-opacity-50 text-white" >Smart Login System </p>
+    </li>
+    <li class="nav-item">
+      <p  class="nav-link fs-2 btn-lg text-white bg-warning bg-opacity-50 log_out" >log_out</p>
     </li>
   
   </ul>
