--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row bg-opacity-75 my-class">
+      <div class="row bg-opacity-75 rounded-2 my-class">
         <div class="col-md-6 form">
           <div class="des">
             <h2 class="text-white text-center mb-3">Welcome Back</h2>
@@ -23,7 +23,7 @@
                 />
                 <label for="email">Email address</label>
                 <div class="valid-feedback">Looks good!</div>
-                <div class="invalid-feedback">Please sure your email.</div>
+                <div class="invalid-feedback">name@example.com</div>
               </div>
 
               <div class="form-floating mb-3">
@@ -31,22 +31,16 @@
                   type="password"
                   class="form-control"
                   id="pass"
-                  placeholder=""
+                  placeholder="********"
                 />
                 <label for="pass">Password</label>
                 <div class="valid-feedback">Looks good!</div>
-                <div class="invalid-feedback">Please sure your password.</div>
+                <div class="invalid-feedback">Aa123</div>
               </div>
 
               <div class="fs-3 mb-2 fw-bold msg"></div>
 
-              <div>
-                <input id="check" type="checkbox" />
-                <label class="lead text-white" for="check"
-                  >i agree to the
-                  <span class="fs-5 fw-bold">Tems of User</span></label
-                >
-              </div>
+             
               <button
                 class="btn bg-white text-black d-block btn-outline-success w-100 m-auto p-2 fs-5 rounded-pill mt-4 Sign_in"
               >
@@ -54,17 +48,17 @@
               </button>
 
               <p class="btn d-block m-auto mt-2 text-white w-100 fs-4 Sign_up">
-                You have an account? Sign_up
+                Don’t have an account? <span class="text-success fs-2">Sign_up</span>
               </p>
             </form>
           </div>
         </div>
-        <div class="d-sm-none d-md-block col-md-6">
+        <div class="d-none d-md-block col-md-6">
           <div
             class="item-img d-flex align-items-center justify-content-center"
           >
             <h1 class="text-center text-success fs-1 mt-">
-              meanlifys <span class="text-danger">.</span>
+              DevFolio <span class="text-danger">.</span>
             </h1>
           </div>
         </div>
