--- a/register.html
+++ b/register.html
@@ -9,15 +9,15 @@
   </head>
   <body class="vh-100 d-flex  align-items-center">
     <div class="container-fluid">
-      <div class="row my-class rounded overflow-hidden">
+      <div class="row my-class rounded-3 overflow-hidden">
         <div
-          class="col-md-7 ps-0 py-0 my-img d-flex align-items-center justify-content-center"
+          class="d-none d-md-flex  col-md-7 ps-0 py-0 my-img d-flex align-items-center justify-content-center"
         >
           <h1 class="text-center text-success fs-1 mt-">
-            meanlifys <span class="text-danger">.</span>
+            DevFolio <span class="text-danger">.</span>
           </h1>
         </div>
-        <div class="col-md-5 p-3">
+        <div class="col-md-5 py-5 px-3">
           <div class="des">
             <form action="">
               <div class="form-floating mb-3">
@@ -40,7 +40,7 @@
                 />
                 <label for="email">Email address</label>
                 <div class="valid-feedback">Looks good!</div>
-                <div class="invalid-feedback">Please choose a email.</div>
+                <div class="invalid-feedback">name@example.com</div>
               </div>
               <div class="form-floating mb-3">
                 <input
@@ -51,7 +51,7 @@
                 />
                 <label for="userNmae">User Name</label>
                 <div class="valid-feedback">Looks good!</div>
-                <div class="invalid-feedback">Please choose a username.</div>
+                <div class="invalid-feedback">text_text</div>
               </div>
               <div class="form-floating mb-3">
                 <input
@@ -62,18 +62,12 @@
                 />
                 <label for="pass">Password</label>
                 <div class="valid-feedback">Looks good!</div>
-                <div class="invalid-feedback">Please choose a Password.</div>
+                <div class="invalid-feedback">Aa123.</div>
               </div>
 
               <div class="fs-3 mb-2 fw-bold msg"></div>
 
-              <div>
-                <input id="check" type="checkbox" />
-                <label class="lead text-white" for="check"
-                  >i agree to the
-                  <span class="fs-5 fw-bold">Tems of User</span></label
-                >
-              </div>
+              
 
               <div class="mt-3">
                 <button
@@ -81,11 +75,7 @@
                 >
                   Sign up
                 </button>
-                <p
-                  class="btn d-block m-auto mt-2 text-white w-100 fs-4 Sign_in"
-                >
-                  You have an account? Signin
-                </p>
+               
               </div>
             </form>
           </div>
